src/app/app_render_tests/snapshots/jiq__app__app_render_tests__paste_recovery_render_tests__snapshot_paste_recovery_after_invalid_paste.snap
---
source: src/app/app_render_tests/paste_recovery_render_tests.rs
assertion_line: 44
expression: output
---
"╭ No JSON loaded ──────────────────────────────────────────────────────────────╮"
"│ Invalid JSON: key must be a string at line 1 column 2                        │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"╭ Paste JSON [INSERT] ─────────────────────────────────────────────────────────╮"
"│{not json                                                                     │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"╰───────── Enter Load JSON • Esc Normal • Ctrl+X Clear • Ctrl+C Quit ──────────╯"
