src/app/app_render_tests/snapshots/jiq__app__app_render_tests__paste_recovery_render_tests__snapshot_paste_recovery_in_normal_mode_shows_only_insert_toggle.snap
---
source: src/app/app_render_tests/paste_recovery_render_tests.rs
assertion_line: 67
expression: output
---
"╭ No JSON loaded ──────────────────────────────────────────────────────────────╮"
"│ No input provided. Clipboard does not contain valid JSON.                    │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"╭ Paste JSON [NORMAL] (press 'i' to edit) ─────────────────────────────────────╮"
"│{"a":1}                                                                       │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"╰────────── Enter Load JSON • i Insert • Ctrl+X Clear • Ctrl+C Quit ───────────╯"
