src/app/app_render_tests/snapshots/jiq__app__app_render_tests__paste_recovery_render_tests__snapshot_paste_recovery_initial.snap
---
source: src/app/app_render_tests/paste_recovery_render_tests.rs
assertion_line: 31
expression: output
---
"╭ No JSON loaded ──────────────────────────────────────────────────────────────╮"
"│ No input provided. Clipboard does not contain valid JSON.                    │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"╭ Paste JSON [INSERT] ─────────────────────────────────────────────────────────╮"
"│ Paste JSON, then press Enter to load                                         │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"╰───────── Enter Load JSON • Esc Normal • Ctrl+X Clear • Ctrl+C Quit ──────────╯"
