src/app/app_render_tests/snapshots/jiq__app__app_render_tests__paste_recovery_render_tests__snapshot_paste_recovery_with_typed_content.snap
---
source: src/app/app_render_tests/paste_recovery_render_tests.rs
expression: output
---
"╭ No JSON loaded ──────────────────────────────────────────────────────────────╮"
"│ No input provided. Clipboard does not contain valid JSON.                    │"
"│                                                                              │"
"│ Paste JSON below and press Enter to load.                                    │"
"│                                                                              │"
"│                                                                              │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"╭ Paste JSON [INSERT] ─────────────────────────────────────────────────────────╮"
"│{                                                                             │"
"│  "name": "Alice",                                                            │"
"│  "age": 30                                                                   │"
"│}                                                                             │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"╰───────── Enter Load JSON • Esc Normal • Ctrl+X Clear • Ctrl+C Quit ──────────╯"
